# workspace

./: README.md  check_os.sh  pyproject.toml
src/: main.py
src/google_search/: __init__.py  models.py  searcher.py
